# Graphics_coursework

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
res/shaders/: Mask.frag  skybox.vert  top_shader.frag  vert_shader.vert
